@@ -1,4 +1,4 @@
-﻿// Copyright © 2008, 2010, Oracle and/or its affiliates. All rights reserved.
+﻿// Copyright © 2008, 2017, Oracle and/or its affiliates. All rights reserved.
 //
 // MySQL for Visual Studio is licensed under the terms of the GPLv2
 // <http://www.gnu.org/licenses/old-licenses/gpl-2.0.html>, like most 
@@ -34,7 +34,7 @@ namespace MySql.Data.VisualStudio.Editors
   {
     private SqlEditor editor;
     internal SqlEditorFactory Factory { get; private set; }
-    internal string DocumentPath { get; private set; }
+    internal string DocumentPath { get; set; }
 
     public SqlEditorPane(ServiceProvider sp, SqlEditorFactory factory)
       : base(sp)
